@@ -311,6 +311,7 @@ Full API documentation is available at http://www.mediawiki.org/wiki/API
 * Add apihighlimits permission, default for sysops and bots
 * Add limit=max to use maximal limit
 * Add action=parse to render parser output. Use it instead of action=render which is deprecated.
+* Add rvtoken=rollback to prop=revisions
 
 === Languages updated in 1.12 ===
 
